# nec2017-analyzer

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
pe/: awk_exception  config.ini  config.py  extract_nec_text.py  extract_ref_by_page.py  extract_text.py  extract_text_pymupdf.py  extract_text_pymupdf_abandoned_01.py  extract_text_pymupdf_abandoned_02.py  main.py  page_extract_text.py  watermark_detection_idea
